--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "raw-node-api-project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index",
+    "test": "echo \"Error: now test specified\"&& exit 1"
+  },
   "devDependencies": {
     "eslint": "8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
@@ -6,5 +13,8 @@
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.15"
   }
 }
