--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
+    "start": "NODE_ENV=staging & node index",
+    "production": "NODE_ENV=production & node index",
     "test": "echo \"Error: now test specified\"&& exit 1"
   },
   "devDependencies": {
